--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-alpha.6",
     "jquery": "^3.2.1",
     "react": "^16.2.0",
-    "react-cntdwn": "^0.3.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17"
   },
@@ -16,7 +15,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "react-countdown-now": "^1.2.0"
-  }
+  "devDependencies": {}
 }
