--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "jquery": "^3.2.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "tether": "^1.4.3"
   },
   "scripts": {
     "start": "set PORT=3006 && react-scripts start",
